--- a/calendar/src/main/res/layout/calendar_month_layout_with_schedule.xml
+++ b/calendar/src/main/res/layout/calendar_month_layout_with_schedule.xml
@@ -6,7 +6,8 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone" >
+        android:visibility="gone">
+
         <LinearLayout
             android:id="@+id/header"
             android:layout_width="match_parent"
@@ -71,18 +72,8 @@
             android:layout_weight="1"
             android:gravity="center"
             android:textAllCaps="true"
-            android:textSize="10sp"
             android:textColor="@color/text"
-            tools:ignore="SmallSp"/>
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:textAllCaps="true"
             android:textSize="10sp"
-            android:textColor="@color/text"
             tools:ignore="SmallSp" />
 
         <TextView
@@ -91,8 +82,8 @@
             android:layout_weight="1"
             android:gravity="center"
             android:textAllCaps="true"
-            android:textSize="10sp"
             android:textColor="@color/text"
+            android:textSize="10sp"
             tools:ignore="SmallSp" />
 
         <TextView
@@ -101,8 +92,8 @@
             android:layout_weight="1"
             android:gravity="center"
             android:textAllCaps="true"
-            android:textSize="10sp"
             android:textColor="@color/text"
+            android:textSize="10sp"
             tools:ignore="SmallSp" />
 
         <TextView
@@ -111,8 +102,8 @@
             android:layout_weight="1"
             android:gravity="center"
             android:textAllCaps="true"
-            android:textSize="10sp"
             android:textColor="@color/text"
+            android:textSize="10sp"
             tools:ignore="SmallSp" />
 
         <TextView
@@ -121,8 +112,8 @@
             android:layout_weight="1"
             android:gravity="center"
             android:textAllCaps="true"
-            android:textSize="10sp"
             android:textColor="@color/text"
+            android:textSize="10sp"
             tools:ignore="SmallSp" />
 
         <TextView
@@ -131,8 +122,18 @@
             android:layout_weight="1"
             android:gravity="center"
             android:textAllCaps="true"
-            android:textSize="10sp"
             android:textColor="@color/text"
+            android:textSize="10sp"
+            tools:ignore="SmallSp" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textAllCaps="true"
+            android:textColor="@color/text"
+            android:textSize="10sp"
             tools:ignore="SmallSp" />
 
     </LinearLayout>
@@ -141,15 +142,20 @@
         android:id="@+id/weeks"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@drawable/bg_calendar_stroke">
+        android:background="@drawable/bg_calendar_stroke"
+        android:orientation="vertical">
 
         <!-- Cashes them at first start -->
         <include layout="@layout/calendar_week_layout_with_scehdule" />
+
         <include layout="@layout/calendar_week_layout_with_scehdule" />
+
         <include layout="@layout/calendar_week_layout_with_scehdule" />
+
         <include layout="@layout/calendar_week_layout_with_scehdule" />
+
         <include layout="@layout/calendar_week_layout_with_scehdule" />
+
         <include layout="@layout/calendar_week_layout_with_scehdule" />
 
     </LinearLayout>
